@@ -1,21 +1,19 @@
 package com.example.algorithm.Heaps.PairingHeap;
 
 import com.example.algorithm.Explanation.Explanation;
-import com.example.algorithm.Heaps.BinaryHeap.BinaryHeap;
-import com.example.algorithm.Heaps.BinaryHeap.BinaryHeapNode;
 import com.example.algorithm.Heaps.HeapService;
 import com.example.algorithm.ResponseTypes.TreeNodeResponse;
 import com.example.algorithm.ResponseTypes.TreeResponse;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
-import org.springframework.util.ResourceUtils;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.List;
 
 @Service
 public class PairingHeapService extends HeapService {
@@ -40,7 +38,11 @@ public class PairingHeapService extends HeapService {
 
     @Override
     public Explanation getExplanation() throws IOException {
-        String explanation = new String(Files.readAllBytes(ResourceUtils.getFile("classpath:explanations/pairingHeap.txt").toPath()));
+        ClassPathResource resource = new ClassPathResource("explanations/pairingHeap.txt");
+        String explanation;
+        try (InputStream in = resource.getInputStream()) {
+            explanation = new String(in.readAllBytes(), StandardCharsets.UTF_8);
+        }
         return new Explanation(explanation);
     }
 
