@@ -6,11 +6,12 @@ import com.example.algorithm.SearchTrees.SearchTreeService;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
-import org.springframework.util.ResourceUtils;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 @Service
 public class BinarySearchTreeService extends SearchTreeService {
@@ -31,8 +32,13 @@ public class BinarySearchTreeService extends SearchTreeService {
         return toResponse(new BinarySearchTree(new BSTNode(value)).getRoot());
     }
 
+    @Override
     public Explanation getExplanation() throws IOException {
-        String explanation = new String(Files.readAllBytes(ResourceUtils.getFile("classpath:explanations/bst.txt").toPath()));
+        ClassPathResource resource = new ClassPathResource("explanations/bst.txt");
+        String explanation;
+        try (InputStream in = resource.getInputStream()) {
+            explanation = new String(in.readAllBytes(), StandardCharsets.UTF_8);
+        }
         return new Explanation(explanation);
     }
 
